# KeySwitchAES

./: CMakeLists.txt  README.md  analyse  file_gen.cpp  k_switch.cpp  log  main.cpp  utils.cpp  utils.hpp  verify.cpp
homo/: CMakeLists.txt  file_genA.cpp  file_genB.cpp  k_switch.cpp  main.cpp  utils.cpp  verify.cpp
